--- a/wizards/purchase_order_recommendation_view.xml
+++ b/wizards/purchase_order_recommendation_view.xml
@@ -97,7 +97,7 @@
             </form>
         </field>
     </record>
-    <record id="achat.purchase_order_recommendation_action" model="ir.actions.act_window">
+    <record id="purchase_order_recommendation_action" model="ir.actions.act_window">
         <field name="name">Recommended Products for this Vendor</field>
         <field name="res_model">purchase.order.recommendation</field>
         <field name="binding_view_types">form</field>
